2013-07-08  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.in (tree-ssa-reassoc.o): Add dependency on $(PARAMS_H).

2013-07-08  Po-Chun Chang  <pchang9@cs.wisc.edu>

	PR rtl-optimization/57786
	* combine.c (distribute_notes) <case REG_DEAD>: Change all_used to bool
	and break out of the loop when it is set to false.

2013-07-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/57819
	* simplify-rtx.c (simplify_unary_operation_1) <case ZERO_EXTEND>:
	Simplify (zero_extend:SI (subreg:QI (and:SI (reg:SI)
	(const_int 63)) 0)).
	* combine.c (make_extraction): Create ZERO_EXTEND or SIGN_EXTEND
	using simplify_gen_unary instead of gen_rtx_*_EXTEND.
	* config/i386/i386.md (*jcc_bt<mode>_1): New define_insn_and_split.

	PR rtl-optimization/57829
	* simplify-rtx.c (simplify_binary_operation_1) <case IOR>: Ensure that
	mask bits outside of mode are just sign-extension from mode to HWI.

2013-07-08  Michael Zolotukhin  <michael.v.zolotukhin@gmail.com>

	* config/i386/i386-opts.h (enum stringop_alg): Add vector_loop.
	* config/i386/i386.c (expand_set_or_movmem_via_loop): Use
	adjust_address instead of change_address to keep info about alignment.
	(emit_strmov): Remove.
	(emit_memmov): New function.
	(expand_movmem_epilogue): Refactor to properly handle bigger sizes.
	(expand_movmem_epilogue): Likewise and return updated rtx for
	destination.
	(expand_constant_movmem_prologue): Likewise and return updated rtx for
	destination and source.
	(decide_alignment): Refactor, handle vector_loop.
	(ix86_expand_movmem): Likewise.
	(ix86_expand_setmem): Likewise.
	* config/i386/i386.opt (Enum): Add vector_loop to option stringop_alg.

2013-07-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/driver-i386.c (host_detect_local_cpu): Do not check
	signature_TM2_ebx, it interferes with signature_INTEL_ebx.

2013-07-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (sse_movlhps): Change alternative 3
	of operand 2 to "m".

2013-07-06  Uros Bizjak  <ubizjak@gmail.com>
